k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-pyapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-pyapp
  template:
    metadata:
      labels:
        app: my-pyapp
    spec:
      containers:
      - name: django
        image: kritik78/my-pyapp-k8s-version:latest-02d0ed3
        imagePullPolicy: Always
        resources:
          limits:
            memory: "250Mi"
            cpu: "500m"
          requests:
            memory: "100Mi"
            cpu: "250m"
        ports:
        - containerPort: 8000
