k8s-manifests/service.yaml
apiVersion: v1 
kind: Service 
metadata:
  name: django-service
spec:
  selector:
    app: my-pyapp
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 8000
  type: NodePort
