k8s-manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: django.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: django-service
            port: 
              number: 8000
